@@ -34,17 +34,17 @@ snp6.sortFeatureTables <- function(db) {
     ## Reorder XXfeature tables
     fillSql <- paste("insert into %s select * from %s order by",
                      "fsetid, allele, strand, pos")
-    dbBeginTransaction(db)
+    dbBegin(db)
     dbGetQuery(db, sprintf(fillSql, "pmfeature", "pmfeature_tmp"))
     dbCommit(db)
-    dbBeginTransaction(db)
+    dbBegin(db)
     fillSql <- paste("insert into %s select * from %s order by",
                      "fsetid, strand")
     dbGetQuery(db, sprintf(fillSql, "pmfeatureCNV", "pmfeatureCNV_tmp"))
     dbCommit(db)
     
     ## drop temp tables
-    dbBeginTransaction(db)
+    dbBegin(db)
     dbGetQuery(db, "drop table pmfeature_tmp")
     dbGetQuery(db, "drop table pmfeatureCNV_tmp")
     dbCommit(db)
